--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/GradutationCap.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PU-CGPA</title>
+    <meta
+    name="description"
+    content="Convert your CGPA to a percentage effortlessly using our simple and accurate tool, designed specifically for Pokhara University students."/>
+    <meta property="og:url" content="https://pu-cgpa.nabinkdl.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Pokhara University CGPA to Percentage Converter" />
+    <meta property="og:description" content="Simplify CGPA conversion for Pokhara University students." />
+    <meta name="keywords" content="CGPA to Percentage, Pokhara University, CGPA Calculator, Academic Performance, Undergraduate Level" />
+    <meta name="author" content="Nabin Kandel" />
+
+    <title>CGPA to Percentage Converter | Pokhara University Students</title>
   </head>
   <body>
     <div id="root"></div>
