--- a/index.html
+++ b/index.html
@@ -2,30 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/GradutationCap.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-    name="description"
-    content="Convert your CGPA to a percentage effortlessly using our simple and accurate tool, designed specifically for Pokhara University students."/>
-    <meta property="og:url" content="https://pu-cgpa.nabinkdl.com/" />
+      name="description"
+      content="Convert your CGPA to a percentage effortlessly using our simple and accurate tool, designed specifically for Pokhara University students."
+    />
+    <meta name="keywords" content="CGPA to Percentage, Pokhara University, CGPA Calculator, Academic Performance, Undergraduate Level" />
+    <meta name="author" content="Nabin Kandel" />
+    <meta property="og:url" content="https://pu.nabinkdl.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pokhara University CGPA to Percentage Converter" />
     <meta property="og:description" content="Simplify CGPA conversion for Pokhara University students." />
-    <meta name="keywords" content="CGPA to Percentage, Pokhara University, CGPA Calculator, Academic Performance, Undergraduate Level" />
-    <meta name="author" content="Nabin Kandel" />
-
+    <link rel="icon" type="image/svg+xml" href="/public/GradutationCap.svg" />
     <title>CGPA to Percentage Converter | Pokhara University Students</title>
-
-    <script type="text/javascript">
-      (function(c,l,a,r,i,t,y){
-          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    <script defer>
+      (function(c, l, a, r, i, t, y) {
+          c[a] = c[a] || function() { (c[a].q = c[a].q || []).push(arguments) };
+          t = l.createElement(r);
+          t.async = 1;
+          t.src = "https://www.clarity.ms/tag/" + i;
+          y = l.getElementsByTagName(r)[0];
+          y.parentNode.insertBefore(t, y);
       })(window, document, "clarity", "script", "pu2juk3yfu");
-  </script>
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <noscript>
+      <p>This tool requires JavaScript to run. Please enable JavaScript in your browser settings.</p>
+    </noscript>
+    <script type="module" src="/src/main.tsx" defer></script>
   </body>
 </html>
