--- a/index.html
+++ b/index.html
@@ -3,26 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Convert your CGPA to a percentage effortlessly using our simple and accurate tool, designed specifically for Pokhara University students."
-    />
-    <meta name="keywords" content="CGPA to Percentage, Pokhara University, CGPA Calculator, Academic Performance, Undergraduate Level" />
+    
+    <!-- Primary Meta Tags -->
+    <meta name="description" content="Convert your CGPA to a percentage effortlessly using our simple and accurate tool, designed specifically for Pokhara University students." />
+    <meta name="keywords" content="CGPA to Percentage, Pokhara University, CGPA Calculator, Academic Performance, Undergraduate Level, CGPA Conversion, Student Tools" />
     <meta name="author" content="Nabin Kandel" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="en" />
+
+    <!-- Open Graph / Facebook / Messenger -->
     <meta property="og:url" content="https://pu.nabinkdl.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pokhara University CGPA to Percentage Converter" />
-    <meta property="og:description" content="Simplify CGPA conversion for Pokhara University students." />
-    <link rel="icon" type="image/svg+xml" href="/public/GradutationCap.svg" />
+    <meta property="og:description" content="Simplify CGPA conversion for Pokhara University students with our free and easy-to-use tool." />
+    <meta property="og:image" content="https://pu.nabinkdl.com/public/GraduationCap.svg" />
+    <meta property="og:image:type" content="image/svg+xml" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Pokhara University CGPA to Percentage Converter Logo" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="CGPA to Percentage Converter" />
+
+    <!-- WhatsApp -->
+    <meta property="og:image" content="https://pu.nabinkdl.com/public/GraduationCap.svg" />
+    <meta name="theme-color" content="#0047AB" />
+
+    <!-- Twitter (optional, improves previews on social platforms) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pokhara University CGPA to Percentage Converter" />
+    <meta name="twitter:description" content="Convert your CGPA to a percentage effortlessly using our accurate and free tool for Pokhara University students." />
+    <meta name="twitter:image" content="https://pu.nabinkdl.com/public/GraduationCap.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/public/GraduationCap.svg" />
+    
     <title>CGPA to Percentage Converter | Pokhara University Students</title>
+
+    <!-- Microsoft Clarity -->
     <script defer>
       (function(c, l, a, r, i, t, y) {
-          c[a] = c[a] || function() { (c[a].q = c[a].q || []).push(arguments) };
-          t = l.createElement(r);
-          t.async = 1;
-          t.src = "https://www.clarity.ms/tag/" + i;
-          y = l.getElementsByTagName(r)[0];
-          y.parentNode.insertBefore(t, y);
+        c[a] = c[a] || function() { (c[a].q = c[a].q || []).push(arguments) };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
       })(window, document, "clarity", "script", "pu2juk3yfu");
     </script>
   </head>
