--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="twitter:image" content="https://pu.nabinkdl.com/public/GraduationCap.svg" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/public/GraduationCap.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/GradutationCap.svg" />
     
     <title>CGPA to Percentage Converter | Pokhara University Students</title>
 
